# hashmap-benchmark

./: .gitignore  .gitmodules  CC-BY-SA-4.0.cn.md  CC-BY-SA-4.0.en.md  CMakeLists.txt  LICENSE.md  LICENSE.old  README.en.md  README.md  cmake-config.sh  cmake-update.sh  hashmap-benchmark.sln
bench/: CMakeLists.txt
bench/benchmark/: BenchmarkResult.h  benchmark.cpp
bench/cardinal_bench/: cardinal_bench.cpp
bench/jackson_bench/: BenchmarkResult.h  bench_config.h  jackson_bench.cpp
bench/jackson_bench/blueprints/cstring_uint64_fnv1a/: blueprint.h
bench/jackson_bench/blueprints/uint32_uint32_murmur/: blueprint.h
bench/jackson_bench/blueprints/uint64_struct448_murmur/: blueprint.h
bench/jackson_bench/blueprints/uint64_uint64_murmur/: blueprint.h
bench/jackson_bench/hashmaps/absl_flat_hash_map/: hashmap_wrapper.h
bench/jackson_bench/hashmaps/ankerl_unordered_dense/: hashmap_wrapper.h
bench/jackson_bench/hashmaps/boost_unordered_flat_map/: hashmap_wrapper.h
bench/jackson_bench/hashmaps/emhash20/: emilib2o_modified.hpp  hashmap_wrapper.h
bench/jackson_bench/hashmaps/emilib2o/: emilib2o_modified.hpp  hashmap_wrapper.h
bench/jackson_bench/hashmaps/jstd_cluster_flat_map/: hashmap_wrapper.h
bench/jackson_bench/hashmaps/jstd_group15_flat_map/: hashmap_wrapper.h
bench/jackson_bench/hashmaps/jstd_group16_flat_map/: hashmap_wrapper.h
bench/jackson_bench/hashmaps/jstd_robin_hash_map/: hashmap_wrapper.h
bench/jackson_bench/hashmaps/ska_bytell_hash_map/: hashmap_wrapper.h
bench/jackson_bench/hashmaps/ska_flat_hash_map/: hashmap_wrapper.h
bench/jackson_bench/hashmaps/std_unordered_map/: hashmap_wrapper.h
bench/jackson_bench/hashmaps/tsl_robin_map/: hashmap_wrapper.h
bench/time_hash_map/: time_hash_map.cpp  time_hash_map_func.hpp  time_hash_map_v1.hpp
bench/time_hash_map_new/: time_hash_map_func.hpp  time_hash_map_new.cpp  time_hash_map_object_func.hpp
clang/: CMakeLists.txt  cmake-clang.sh  cmake-clean.sh  cmake-cmd.txt  cmake-config.sh
cmake/: ASM_NASM_Information.cmake  CMakeCheckIPOSupported.cmake  CMakeLists_yasm.txt  CMakeUtils.cmake  CheckComplierEnv.cmake  DetectCPUArchitectures.cmake  DetectCXXCompiler.cmake  GetCompilerToolset.cmake  GetOSEnv.cmake  With_MT_If_MSVC.cmake
cmake/checks/: cpu_neon.cpp
csharp/DictionaryTest/: DictionaryTest.sln  ReadMe.md  benchmark.bat
csharp/DictionaryTest/DictionaryTest/: .gitignore  DictionaryTest.csproj  Program.cs  benchmark.bat
csharp/DictionaryTest/DictionaryTest/Properties/: AssemblyInfo.cs
csharp/DictionaryTest/DictionaryTest/jstd/Collections/: DictionaryEx.cs  HashHelpers.cs
data/: Maven.keys.txt
golang/hashmap-benchmark/: Main.go  ReadMe.md  StopWatch.go  build-cmd.txt
java/: ReadMe.txt
java/HashMapTest/: .gitignore
java/HashMapTest/HashMapTest/: .gitignore  .project  benchmark.bat  header_fields.txt
java/HashMapTest/HashMapTest/output/: HashMapTest.jardesc  MANIFEST.MF
java/HashMapTest/HashMapTest/src/net/i77studio/hashmap/test/: HashMapBenchmark.java  NoConstantPoolHashMapBenchmark.java  Program.java  StopWatch.java  package-info.java
projects/vc2015/benchmark/: benchmark.vcxproj  benchmark.vcxproj.filters
projects/vc2015/cardinal_bench/: cardinal_bench.vcxproj  cardinal_bench.vcxproj.filters
projects/vc2015/jackson_bench/: jackson_bench.vcxproj  jackson_bench.vcxproj.filters
projects/vc2015/time_hash_map/: time_hash_map.vcxproj  time_hash_map.vcxproj.filters
projects/vc2015/time_hash_map_new/: time_hash_map_new.vcxproj  time_hash_map_new.vcxproj.filters
result/: Hashmap-benchmark.xls  benchmark_result.md
template/: benchmark-chart.js-demo.html  benchmark-echart.js-demo.html
time_hash_map/: time_hash_map.vcxproj  time_hash_map.vcxproj.filters
